<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/user_list"
        android:textColor="#87CEEB"
        android:textSize="26sp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/right_user"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#87CEEB" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/right_padding"
                android:text="@string/name"
                android:textColor="#b0b0b0" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/right_padding"
                android:text="@string/sex"
                android:textColor="#b0b0b0" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/right_padding"
                android:text="@string/birthday"
                android:textColor="#b0b0b0" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/right_padding"
                android:text="@string/weight"
                android:textColor="#b0b0b0" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/right_padding"
                android:text="@string/height"
                android:textColor="#b0b0b0" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/right_padding"
                android:text="@string/medical_id"
                android:textColor="#b0b0b0" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/right_padding"
                android:text="@string/pacemaker"
                android:textColor="#b0b0b0" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/rName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/right_padding" />

            <TextView
                android:id="@+id/rSex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/right_padding" />

            <TextView
                android:id="@+id/rBirthday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/right_padding" />

            <TextView
                android:id="@+id/rWeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/right_padding" />

            <TextView
                android:id="@+id/rHeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/right_padding" />

            <TextView
                android:id="@+id/rMedicalID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/right_padding" />

            <TextView
                android:id="@+id/rPacemaker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/right_padding" />

        </LinearLayout>


    </LinearLayout>
</LinearLayout>