<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scan_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#87CEEB"
    android:orientation="vertical"
    android:visibility="visible"
    tools:context=".activity.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#ff000000"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="#87CEEB"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/scan_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="20dp"
        android:text="@string/scanning_checkme_device"
        android:textColor="#ffa0b000"
        android:textSize="16sp"
        android:typeface="monospace" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/ble_table"
        android:layout_width="match_parent"
        android:layout_height="390dp" />


    <TextView
        android:id="@+id/notifyVal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/notifySum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="offline"
            android:padding="20sp"
            android:text="@string/offline_mode"
            android:textAllCaps="false"
            android:textSize="26sp" />
    </LinearLayout>


</LinearLayout>